--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@
 # Check https://circleci.com/docs/2.0/language-go/ for more details
 version: 2
 jobs:
-  build:
+  test_and_build:
     docker:
       # specify the version
       - image: circleci/golang:1.10
@@ -26,4 +26,43 @@ jobs:
       # specify any bash command here prefixed with `run: `
       - run: make test
       - run: make build
-  
+  deploy:
+    docker:
+      # specify the version
+      - image: circleci/golang:1.10
+      
+      # Specify service dependencies here if necessary
+      # CircleCI maintains a library of pre-built images
+      # documented at https://circleci.com/docs/2.0/circleci-images/
+      # - image: circleci/postgres:9.4
+
+    #### TEMPLATE_NOTE: go expects specific checkout path representing url
+    #### expecting it in the form of
+    ####   /go/src/github.com/circleci/go-tool
+    ####   /go/src/bitbucket.org/circleci/go-tool
+    working_directory: /go/src/github.com/ottogiron/training-go
+    steps:
+      - checkout
+      - setup_remote_docker:
+            docker_layer_caching: true # default - false 
+      - run: | 
+            docker login --username $DOCKER_USER --password $DOCKER_PASSWORD
+            make release
+
+workflows:
+  version: 2
+  training-go-workflow:
+    jobs:
+      - test_and_build:
+          filters:
+              tags:
+                only: /.*/         
+      - deploy:
+          context: org-global
+          requires:
+            - test_and_build
+          filters:
+            tags:
+              only: /^v.*/
+            branches:
+              ignore: /.*/
