add debug options to release

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,8 @@ jobs:
       - checkout
       - setup_remote_docker:
             docker_layer_caching: true # default - false 
-      - run: | 
+      - run: |
+            set -eux
             docker login --username $DOCKER_USER --password $DOCKER_PASSWORD
             make release
 
